<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlakTour</string>
    <string name="action_settings">Instellingen</string>
    
    <string name="title_activity_tour_detail">Tour Detail</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_settings">Instellingen</string>
    
    <string name="detail_points">Aantal Punten</string>
    <string name="detail_posters">Aantal Affiches</string>
    <string name="detail_time">Tijd</string>
    <string name="detail_lastActivity">Laatste Activiteit</string>
    <string name="detail_pointsDone">Aantal punten gedaan</string>
    
    <string name="header_profile">profiel</string>
    
    <string name="profileMenu_profile">Profiel</string>
    <string name="profileMenu_logOut">Uitloggen</string>
    
    <string name="mapMenu_newPoint">Nieuw Punt Toevoegen</string>
    <string name="newPoint_Title">Nieuw Punt</string>
    <string name="newPoint_Message">Hoeveel Posters?</string>
    
    <string name="settings_distanceToPoint">Minimum aftand tot punt</string>
    <string name="settings_timeNearPoint">Minimum tijd bij punt</string>
    <string name="settings_distanceToPointUnit">m</string>
    <string name="settings_timeNearPointUnit">sec.</string>
    <string name="settings_restoreDefaultBtn">StandaardWaarden</string>
    
    <!-- dialog to ask the user if the point is done -->
    <string name="confirm_point_done">Punt Gedaan</string>
    <string name="confirm_point_done_dialog">Is dit punt gedaan?</string>
    <string name="confirm_point_done_action">Gedaan en verder</string>
    
    <!-- dialog to prompt the user to enable the gps -->
    <string name="enable_gps">GPS aanzetten</string>
    <string name="enable_gps_dialog">De GPS is niet ingeschakeld. Wil je deze inschakelen?</string>
    <string name="not_support_gps">GPS provider niet ondersteund</string>
    
    <!-- Internet strings -->
    <string name="api_url">http://192.168.0.191/PlakTour_app/json/getTours.php</string>
    
    <!-- Accessible strings -->
    <string name="start_button">Start Tour</string>
    <string name="comments_button">View Comments</string>
    <string name="newTour_button">Create New Tour</string>

</resources>