<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="@color/bottomBarBackground" >

    <ListView
        android:id="@+id/listViewTours"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:background="@drawable/gradient_tours"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="48dp"
        android:paddingTop="6dp"
        android:paddingRight="0dp"
        android:paddingBottom="6dp"
        android:paddingLeft="0dp"
        android:divider="#00000000"
        android:dividerHeight="0dp"
        android:listSelector="@drawable/tour_list_selector">
		
    </ListView>	
    
    <!-- bottom bar -->
    <LinearLayout 
        android:layout_height="36dip"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/bottomActionBar">
        
        <ImageButton
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/comments_button"
            android:src="@drawable/comments_icon"
            android:id="@+id/comments_button" 
            android:onClick="viewTourComments"/>        
        <ImageButton
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/start_button"
            android:src="@drawable/start_icon" 
            android:background="@null" 
            android:id="@+id/start_button" 
            android:onClick="startTour"/>
		
        <ImageButton
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/newTour_button"
            android:src="@drawable/newtour_icon" 
            android:background="@null"
            android:id="@+id/new_tour_button"
            android:onClick="newTour" />
        
    </LinearLayout>
</RelativeLayout>